; ModuleID = '/home/carl/AnghaBench/h2o/t/00unit/lib/http2/extr_casper.c_test_calc_key.c'
source_filename = "/home/carl/AnghaBench/h2o/t/00unit/lib/http2/extr_casper.c_test_calc_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"/index.html\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"\14\FEEY\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_calc_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_calc_key() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = call i32* @h2o_http2_casper_create(i32 13, i32 6)
  store i32* %4, i32** %1, align 8
  %5 = load i32*, i32** %1, align 8
  %6 = call i32 @H2O_STRLIT(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %7 = call i32 @calc_key(i32* %5, i32 %6)
  store i32 %7, i32* %2, align 4
  %8 = call i32 @memcpy(i32* %3, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32 4)
  %9 = load i32, i32* %3, align 4
  %10 = and i32 %9, 8191
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* %3, align 4
  %13 = icmp eq i32 %11, %12
  %14 = zext i1 %13 to i32
  %15 = call i32 @ok(i32 %14)
  %16 = load i32*, i32** %1, align 8
  %17 = call i32 @h2o_http2_casper_destroy(i32* %16)
  ret void
}

declare dso_local i32* @h2o_http2_casper_create(i32, i32) #1

declare dso_local i32 @calc_key(i32*, i32) #1

declare dso_local i32 @H2O_STRLIT(i8*) #1

declare dso_local i32 @memcpy(i32*, i8*, i32) #1

declare dso_local i32 @ok(i32) #1

declare dso_local i32 @h2o_http2_casper_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
